--- a/apollo-and-mongoose/.env
+++ b/apollo-and-mongoose/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGO_DB_URI=mongodb+srv://root:1234@cluster0.p1pnq.mongodb.net/GraphQlTest?retryWrites=true&w=majority
+JWT_SECRET=miSecreto1258797=8989w&5
