--- a/apollo-and-mongoose/package.json
+++ b/apollo-and-mongoose/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "mongoose-unique-validator": "^2.0.3"
   },
